tests/NormalTests/paczka2/big_fuzzy/98239860.err
Error in line 3: uji A133 80,1
Error in line 1: xUM A869 43,9
Error in line 11: M2UH59r S658 98,8
Error in line 19: A133 A133 41,5
Error in line 29: uji S658 59,6
Error in line 24: xUM S864 154,4
Error in line 38: A133 S658 22,3
Error in line 42: A133 A133 28,6
Error in line 50: A133 S864 55,8
Error in line 20: GCFumh8eZ A869 50,2
Error in line 44: QcrBOejNU0 A869 57,7
Error in line 58: GCFumh8eZ A869 82,4
Error in line 63: uji S658 39,8
Error in line 70: VtO8ARBM2ms A869 26,5
Error in line 75: M2UH59r S658 173,4
Error in line 74: QcrBOejNU0 A869 73,2
Error in line 88: A133 S864 69,24
Error in line 80: M2UH59r A133 21,8
Error in line 85: VtO8ARBM2ms S658 80,1
Error in line 104: VtO8ARBM2ms AT33 74,8
Error in line 107: A133 S864 -2,3
Error in line 103: VtO8ARBM2ms S658 75,8
Error in line 105: M2UH59r S864 73,8
Error in line 111: VtO8ARBM2ms A133 119,7
Error in line 125: QcrBOejNU0 S658 89,3
Error in line 133: GCFumh8eZ A869 6,1
Error in line 135: GCFumh8eZ S864 8,2
Error in line 140: VtO8ARBM2ms A869 51,55
Error in line 127: VtO8ARBM2ms S658 74,3
Error in line 137: GCFumh8eZ A869 41,2
Error in line 139: uji S864 69,2
Error in line 149: uji S658 29,7
Error in line 173: uji A869 51,9
Error in line 179: VtO8ARBM2ms A133 42,3
Error in line 187: A133 S658 1,0
Error in line 193: VtO8ARBM2ms A869 42,8
Error in line 183: uji S658 41,3
Error in line 238: A133 A133 18,0
Error in line 241: A133 S864 37,1
Error in line 239: VtO8ARBM2ms A133 2,6
